# is6110

./: README.md  pyproject.toml
src/is6110/: __init__.py  gff.py
src/is6110/data/: IS.fasta  IS6110.fasta  IS6110.fasta.amb  IS6110.fasta.ann  IS6110.fasta.bwt  IS6110.fasta.pac  IS6110.fasta.sa
